MDEV-27600 partition_debug fails with warnings "Table is open on rename new table"

Table must be closed before running ddl log revert. That is done by
handle_alter_part_error().